<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">
    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#ECECEC"
            app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
            android:id="@+id/subliminals_container"
            android:layout_width="wrap_content"
            android:layout_height="82dp"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginEnd="100dp"
            app:layout_constraintTop_toTopOf="@+id/favourites_container"
            app:layout_constraintBottom_toBottomOf="@+id/favourites_container"
            app:layout_constraintEnd_toStartOf="@+id/favourites_container">

        <ImageButton
                android:id="@+id/ib_subliminals"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Toolbar.Button.Bottom"
                android:src="@drawable/headphones"
                android:contentDescription="@string/icon_subliminals" />

        <TextView
                android:id="@+id/tv_subliminals"
                style="@style/Toolbar.Button.Text"
                android:textColor="@color/text_toolbar_button_choosen"
                android:text="@string/subliminals" />

    </LinearLayout>

    <LinearLayout
            android:id="@+id/favourites_container"
            android:layout_width="wrap_content"
            android:layout_height="82dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <ImageButton
                android:id="@+id/ib_favourites"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Toolbar.Button.Bottom"
                android:src="@drawable/heart"
                android:contentDescription="@string/icon_favourites" />

        <TextView
                android:id="@+id/tv_favourites"
                style="@style/Toolbar.Button.Text"
                android:textColor="@color/text_toolbar_button"
                android:text="@string/favorites" />

    </LinearLayout>

    <LinearLayout
            android:id="@+id/journal_container"
            android:layout_width="wrap_content"
            android:layout_height="82dp"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginStart="100dp"
            app:layout_constraintTop_toTopOf="@+id/favourites_container"
            app:layout_constraintBottom_toBottomOf="@+id/favourites_container"
            app:layout_constraintStart_toEndOf="@+id/favourites_container">

        <ImageButton
                android:id="@+id/ib_journal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Toolbar.Button.Bottom"
                android:src="@drawable/notes"
                android:contentDescription="@string/icon_journal" />

        <TextView
                android:id="@+id/tv_journal"
                style="@style/Toolbar.Button.Text"
                android:textColor="@color/text_toolbar_button"
                android:text="@string/journal" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>